# MCXB1Netplay

./: .gitignore  CMakeLists.txt  LICENSE  LanternMain.h  McXb1NetplayMod.h  McXb1NetplayMod.sln  McXb1NetplayMod.vcxproj  README.md
Hooks/: OutputStream.h  Socket.cpp  SocketOutputStreamLocal.h
lib/: readme.md
src/: LanternMain.cpp  McXb1NetplayMod.cpp
src/Hooks/: OutputStream.cpp  Socket.h  SocketOutputStreamLocal.cpp
